# dwave-optimization

./: .clang-format  .gitignore  .gitmodules  CONTRIBUTING.rst  MANIFEST.in  README.rst  meson.build  meson.options  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: releasenote-check.yml
docs/: Doxyfile  ImplicitlyConstrainedSymbols.rst  Makefile  api_ref.rst  best_practices.rst  conf.py  implicit_constraints.rst  index.rst  intro.rst  math.rst  models.rst  philosophy.rst  release_notes.rst  requirements.txt  sdk_index.rst  symbols.rst  typing.rst
docs/_templates/: autosummary_class.rst  autosummary_module_classes.rst
docs/reference/: cpp.rst  generators.rst  index.rst  math.rst  models.rst  symbols.rst
dwave/: __init__.py
dwave/optimization/: __init__.pxd  __init__.py  _graph.pxd  _graph.pyi  _graph.pyx  _model.pxd  _model.pyi  _model.pyx  _symbols.pyx  _utilities.pxd  _utilities.pyx  client.py  expression.py  generators.py  graph_manager.pxd  graph_manager.pyi  graph_manager.pyx  mathematical.py  model.pxd  model.py  model.pyi  model.pyx  states.pxd  states.pyi  states.pyx  symbols.pxd  symbols.pyi  symbols.pyx  testing.py  typing.py  utilities.py
dwave/optimization/_build/: _find_openblas.py  _fix_rpath.py  _version.py  _windows_repair_wheel.sh
dwave/optimization/include/dwave-optimization/: array.hpp  common.hpp  fraction.hpp  (+10 more)
dwave/optimization/libcpp/: __init__.pxd  array.pxd  fraction.pxd  graph.pxd  nodes.pxd  state.pxd
dwave/optimization/pch/: pch.hpp
dwave/optimization/src/: array.cpp  double_kahan.hpp  fraction.cpp  functional_.hpp  graph.cpp  interval.cpp  iterators.cpp  simplex.cpp  simplex.hpp  utils.cpp  vartypes.cpp
dwave/optimization/symbols/: __init__.py  _binaryop.pyi  _binaryop.pyx  _cysymbols.pyi  _cysymbols.pyx  _deprecated.pyi  _deprecated.pyx  _pysymbols.py  _reduce.pyi  _reduce.pyx  _unaryop.pyi  _unaryop.pyx  accumulate_zip.pyi  accumulate_zip.pyx  binaryop.py  collections.pyi  collections.pyx  constants.pyi  constants.pyx  creation.pyi  creation.pyx  flow.pyi  flow.pyx  indexing.pyi  indexing.pyx  inputs.pyi  inputs.pyx  interpolation.pyi  interpolation.pyx  linear_algebra.pyi  linear_algebra.pyx  lp.pyi  lp.pyx  manipulation.pyi  manipulation.pyx  naryop.pyi  naryop.pyx  numbers.pyi  numbers.pyx  quadratic_model.pyi  (+14 more)
releasenotes/notes/: ARange-sizeinfo-fix-18be6df54b5b9a7e.yaml  Array.minmax-6de0b413d2c77b4c.yaml  ArraySymbol.info-8e37b2e4cc7e150e.yaml  BinaryOpNode-sizeinfo-ac3a01130d77efcc.yaml  ConstantNode-const-pointer-8b1c160fc5b6f2cb.yaml  Graph-constructor-assignment-20de69b40825424b.yaml  NaryOpNode-from-Array-pointers-bdf7c53f9850d9c2.yaml  PartialProd-fbc3c145701acf2d.yaml  Roll-release-note-8baedd0d475ed5a0.yaml  Symbol-id-a2b54683fbb83f0a.yaml  UnaryOpNode-dynamic-predecessor-f7cd282afb15270d.yaml  Update-totally-ordered-59a3c2e3c9c24fd2.yaml  ValuesInfo-set-operations-9d67468b81f5304e.yaml  View-convenience-57d9c519201b941e.yaml  _Graph-e85b234643bb01a7.yaml  add-CVRPTW-generator-9315a2fe767d934a.yaml  add-argsort-symbol-9f55d9c3f6f16440.yaml  add-basic-indexing-node-start-index-e8e32c6bb1a8f67c.yaml  add-bin_packing-generator-510a5af519a964a6.yaml  add-bspline-node-3ec11f2ba4ed4b16.yaml  add-disjoint-lists-set-state-method-49cb6ade68a2f2ec.yaml  add-div-node-852711d8127d0cc2.yaml  add-exp-node-b9c3a41c179d8d54.yaml  add-expit-node-b9f4c62ca9136a86.yaml  add-expression-and-accumulate-zip-eb2c7f6feb4f2d0f.yaml  add-expression-and-nary-reduce-8f3e4b1bc063cedf.yaml  add-expression-and-nary-reduce-input-symbols-272a05fdc2425da3.yaml  add-extract-symbol-126b39be743c8c66.yaml  add-input-node-9895a53a6b13f51b.yaml  add-log-node-f7c505316b23a787.yaml  add-lp-symbol-f041b12d7f75cbfe.yaml  add-matrix-multiplication-symbol-ebf608660b82adfa.yaml  add-modulus-9955080919218848.yaml  add-num_edges-4569f47ca86590de.yaml  add-quadratic-assignment_generator-6955619da329e057.yaml  add-rint-node-3d000c89d8dc4236.yaml  add-sqrt-node-48c30ba46bb85f55.yaml  add-stack-method-9e483e5bb7517c5d.yaml  add-stack-node-34bc59ce46c81256.yaml  add-supported-arraysymbol-exponents-c7be57d09c097671.yaml  (+148 more)
subprojects/: catch2.wrap
tests/: requirements.txt  test_client.py  test_examples.py  test_expression.py  test_generators.py  test_mathematical.py  test_model.py  test_serialization.py  test_states.py  test_symbols.py  test_utilities.py  utils.py
tests/cpp/: Makefile  meson.build  test_array.cpp  test_double_kahan.cpp  test_fraction.cpp  test_functional.cpp  test_functional_.cpp  test_graph.cpp  test_interval.cpp  test_iterators.cpp  test_simplex.cpp  test_type_list.cpp  test_typing.cpp  test_utils.cpp
tests/cpp/cp/: test_copier.cpp  test_cp_var.cpp  test_interval.cpp  test_propagator.cpp  test_sparse_set.cpp  utils.hpp
tests/cpp/cp/propagators/: test_binaryop.cpp  test_collections.cpp  test_reduce.cpp
tests/cpp/nodes/: test_binaryop.cpp  test_collections.cpp  test_constants.cpp  test_creation.cpp  test_flow.cpp  test_inputs.cpp  test_interpolation.cpp  test_lambda.cpp  test_linear_algebra.cpp  test_lp.cpp  test_manipulation.cpp  test_naryop.cpp  test_numbers.cpp  test_quadratic_model.cpp  test_reduce.cpp  test_set_routines.cpp  test_softmax.cpp  test_sorting.cpp  test_statistics.cpp  test_unaryop.cpp
tests/cpp/nodes/indexing/: test_advanced.cpp  test_basic.cpp  test_permutation.cpp
tests/cpp/nodes/mathematical/: test_binaryop.cpp  test_functional.cpp  test_naryop.cpp  test_reduce.cpp  test_softmax.cpp  test_unaryop.cpp
tests/cpp/tests/: test_array.cpp  test_examples.cpp  test_flow.cpp  test_graph.cpp  test_nodes_collections.cpp  test_nodes_constants.cpp  test_nodes_flow.cpp  test_nodes_indexing.cpp  test_nodes_indexing_advanced.cpp  test_nodes_indexing_basic.cpp  test_nodes_manipulation.cpp  test_nodes_mathematical.cpp  test_nodes_mathematical_binaryop.cpp  test_nodes_mathematical_naryop.cpp  test_nodes_mathematical_reduce.cpp  test_nodes_mathematical_unaryop.cpp  test_nodes_numbers.cpp  test_nodes_quadratic_model.cpp  test_utils.cpp  utils.hpp
(+112 files in other folders)
