[build-system]
requires = [
    "cython~=3.1.0",
    "meson-python~=0.18.0",
]
build-backend = 'mesonpy'

[project]
name = "dwave-optimization"
dynamic = ["version"]
authors = [
    {name = "D-Wave Inc.", email = "tools@dwavesys.com"},
]
description = "Enables the formulation of nonlinear models for industrial optimization problems."
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    'Programming Language :: Python :: Implementation :: CPython',
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",  # numpy.typing support
]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Changelog = "https://github.com/dwavesystems/dwave-optimization/releases"
Documentation = "https://docs.dwavequantum.com"
"Source Code" = "https://github.com/dwavesystems/dwave-optimization"

[tool.cibuildwheel]
build-verbosity = "1"
skip = "pp* *musllinux*"
before-test = "pip install -r {project}/tests/requirements.txt"
test-command = "python -Werror -m unittest discover {project}/tests/"

[tool.cibuildwheel.config-settings]
compile-args = ["-v"]

[tool.cibuildwheel.linux]
archs = "x86_64 aarch64"

[tool.cibuildwheel.macos]
# We follow NumPy and don't build universal wheels, see https://github.com/numpy/numpy/pull/20787
archs = "x86_64 arm64"

# Lowest version that has the C++ features we want, see https://cibuildwheel.pypa.io/en/stable/cpp_standards/
environment = "MACOSX_DEPLOYMENT_TARGET=10.13"

[tool.cibuildwheel.windows]
archs = "AMD64"
before-build = "pip install delvewheel>=1.4.0"
repair-wheel-command = [
  "delvewheel repair -w {dest_dir} {wheel} --namespace-pkg dwave",
]

[[tool.cibuildwheel.overrides]]
# We don't build an limited api wheel on Python<3.12
select = "cp3{9,10,11}-*"
build-frontend = { name = "build", args = ["-Csetup-args=-Dpython.allow_limited_api=false"] }

[[tool.cibuildwheel.overrides]]
# Likewise limited API doesn't work for free-threaded builds (as of August 2025)
select = "cp*t-*"
build-frontend = { name = "build", args = ["-Csetup-args=-Dpython.allow_limited_api=false"] }

[[tool.cibuildwheel.overrides]]
# For the other versions though, we *do* want to run abi3audit. Unfortunately we need to call
# them out by version explicitly. Luckily only the first will actually be run so if we forget
# to keep the updated it should be fine.
select = "cp3{12,13,14}-*"
inherit.before-build = "append"
before-build = ["pip install abi3audit"]
inherit.repair-wheel-command = "append"
repair-wheel-command = ["abi3audit --strict --report {wheel}"]

[tool.coverage.run]
source = ["dwave/optimization"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.meson-python]
limited-api = true
