[build-system]
requires = [
    "cython~=3.1.0",
    "meson-python~=0.18.0",
]
build-backend = 'mesonpy'

[project]
name = "dwave-optimization"
dynamic = ["version"]
authors = [
    {name = "D-Wave Inc.", email = "tools@dwavesys.com"},
]
description = "Enables the formulation of nonlinear models for industrial optimization problems."
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    'Programming Language :: Python :: Implementation :: CPython',
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",  # numpy.typing support
]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Changelog = "https://github.com/dwavesystems/dwave-optimization/releases"
Documentation = "https://docs.dwavequantum.com"
"Source Code" = "https://github.com/dwavesystems/dwave-optimization"

[tool.cibuildwheel]
build-verbosity = "1"
skip = "pp* *musllinux*"
before-test = "pip install -r {project}/tests/requirements.txt"
test-command = "python -Werror -m unittest discover {project}/tests/"

[tool.cibuildwheel.config-settings]
compile-args = ["-v"]

[tool.cibuildwheel.linux]
archs = "x86_64 aarch64"

[tool.cibuildwheel.macos]
# We follow NumPy and don't build universal wheels, see https://github.com/numpy/numpy/pull/20787
archs = "x86_64 arm64"

# Lowest version that has the C++ features we want, see https://cibuildwheel.pypa.io/en/stable/cpp_standards/
environment = "MACOSX_DEPLOYMENT_TARGET=10.13"

[tool.cibuildwheel.windows]
archs = "AMD64"
repair-wheel-command = [
    "pip install delvewheel",
    "delvewheel repair -w {dest_dir} {wheel} --namespace-pkg dwave",
]

[[tool.cibuildwheel.overrides]]
# For Python3.12+, rather than building individual wheels we build an abi3
# wheel. 313t and 314t do not support abi wheels yet.
select = "cp31[!01]-*"  # uses fnmatch, will fail for 3.20+ but good enough for now
build-frontend = { name = "build", args = ["-Csetup-args=-Dpython.allow_limited_api=true"] }
inherit.repair-wheel-command = "append"
repair-wheel-command = [
    "pip install abi3audit",
    "abi3audit --strict --report {wheel}",
]

[[tool.cibuildwheel.overrides]]
select = "*-????linux_*"
inherit.repair-wheel-command = "prepend"
repair-wheel-command = "python /project/dwave/optimization/_build/_fix_rpath.py {wheel}"

[[tool.cibuildwheel.overrides]]
select = "*-macosx_*"
inherit.repair-wheel-command = "prepend"
repair-wheel-command = "python ./dwave/optimization/_build/_fix_rpath.py {wheel}"

[tool.coverage.run]
source = ["dwave/optimization"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# This is, by default, overriden in meson.build. We then override the override
# in cibuildwheel. It's a bit convoluted, but (as of August 2025) it's the only
# way to get it to work, see https://github.com/mesonbuild/meson-python/issues/787
[tool.meson-python]
limited-api = true
