[metadata]
name = dwave-optimization
version = attr: dwave.optimization.__version__
description = Enables the formulation of nonlinear models for industrial optimization problems.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache 2.0
license_files = LICENSE
author = D-Wave Inc.
author_email = tools@dwavesys.com
url = https://github.com/dwavesystems/dwave-optimization
project_urls =
    Documentation = https://docs.ocean.dwavesys.com
    Issue Tracker = https://github.com/dwavesystems/dwave-optimization/issues/
    Source Code = https://github.com/dwavesystems/dwave-optimization/
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython

[options]
packages =
    dwave
    dwave.optimization
zip_safe = false
include_package_data = true
python_requires = >=3.8
install_requires =
    numpy>=1.20.0,<2.0.0

[pycodestyle]
max-line-length = 100
